crates/analyzer/tests/snapshots/errors__circular_dependency_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `Foo.create(...)` called within `Foo` creates an illegal circular dependency
  ┌─ compile_errors/circular_dependency_create.fe:3:24
  │
3 │         let foo: Foo = Foo.create(0)
  │                        ^^^^^^^^^^ Contract creation
  │
  = Note: Consider using a dedicated factory contract to create instances of `Foo`


